--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+marshmallow-sqlalchemy==0.28.1
 mccabe==0.7.0
 packaging==24.2
 pluggy==1.5.0
@@ -18,3 +19,5 @@ pytest==8.3.5
 webargs==8.6.0
 Werkzeug==3.1.3
 flask-cors==5.0.1
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.36
